2004-02-17  Alexander Larsson  <alexl@redhat.com>

	* gtkfilesystemgnomevfs.c:
	Don't start load on get_folder.
	Always reload on get_children (to avoid stale data)
	
	* gtkfilesystemgnomevfs.c:
	Use right desktop folder icon

2004-02-17  Alexander Larsson  <alexl@redhat.com>

	* gtkfilesystemgnomevfs.c:
	Clean up todo list
	Canonicalize uris for folder lookup
	Add filesystem volume
	Better default permissions for new folders
	Better display names for drives
	Cache icons
	Use previously read stat info for icon lookup
	Various small fixes
	
2004-02-17  Alexander Larsson  <alexl@redhat.com>

	* gtkfilesystemgnomevfs.c:
	Build as a module inside gnome-vfs. Module API not finalized, but
	I wanted something in cvs.
	Also fixes a few issues and adds some TODOs.

2004-02-03  Federico Mena Quintero  <federico@ximian.com>

	* Moved from the gtkfilechooser module on CVS to gnome-vfs/gtk.

2004-01-30  Federico Mena Quintero  <federico@ximian.com>

	* gtkfilesystemgnomevfs.c: Use "#ifdef USE_GCONF" for the
	bookmarks code.  For now we will just use the code from
	GtkFileSystemUnix, so that both implementations share the same
	bookmarks.

	* gtkfilesystemgnomevfs.c
	(gtk_file_system_gnome_vfs_add_bookmark): Use the code from
	GtkFileSystemGnomeVFS.
	(gtk_file_system_gnome_vfs_remove_bookmark): Likewise.
	(gtk_file_system_gnome_vfs_list_bookmarks): Likewise.

2004-01-19  Federico Mena Quintero  <federico@ximian.com>

	* gtkfilesystemgnomevfs.c
	(gtk_file_system_gnome_vfs_get_volume_for_path): Look upwards
	through the parents of the path until we get a volume that is
	user-visible.

2004-01-15  Federico Mena Quintero  <federico@ximian.com>

	* gtkfilesystemgnomevfs.c
	(gtk_file_system_gnome_vfs_get_volume_for_path): Implement.
	(gtk_file_system_gnome_vfs_list_roots): Removed.
	(gtk_file_system_gnome_vfs_get_root_info): Removed.
	(volume_mount_unmount_cb): Oops, emit "volumes-changed", not
	"roots-changed".
	(drive_connect_disconnect_cb): Likewise.