@@ -1,3 +1,8 @@
+2004-02-23  Alexander Larsson  <alexl@redhat.com>
+
+	* gtkfilesystemgnomevfs.c (lookup_vfs_info_in_folder):
+	Don't access NULL child.
+
 2004-02-17  Alexander Larsson  <alexl@redhat.com>
 
 	* gtkfilesystemgnomevfs.c:
